--- a/doc/1017.md
+++ b/doc/1017.md
@@ -24,3 +24,8 @@ docker run -d \
 
 volume을 만들면 리눅스 전체 파일시스템같은 폴더구조가 생기는건가?
 아니면 빈폴더같은 공간이 할당되는건가?
+
+이미지를 빌드하고 첫 컨테이너를 생성해야
+볼륨이 생성됨.
+
+이미지를 삭제해도 멈춰있던 컨테이너는 죽지 않음....
